Improved some stuff
- Tidied up languages directory
- Translated server's error messages to various languages
- Fixed some bugs
- Patched administrator permission issue
- Improved layout for mobile

--- a/src/languages/en/courses.json
+++ b/src/languages/en/courses.json
@@ -1,93 +1,60 @@
 {
     "title": "Courses",
     
-    "context_open_in_new_tab": "Open in new tab",
-    "context_pin_template": "Pin “{0}”",
-    "context_unpin_template": "Unpin “{0}”",
-    "context_pin": "Pin",
-    "context_unpin": "Unpin",
-    "context_print": "Print...",
+    "newtab": "Open in new tab",
+    "pin_template": "Pin “{0}”",
+    "unpin_template": "Unpin “{0}”",
+    "pin": "Pin",
+    "unpin": "Unpin",
 
-    "tooltip_new_course": "Create New Course",
-    "tooltip_edit_course": "Edit Course",
-    "tooltip_new_topic": "Create New Topic",
-    "tooltip_filter": "Filter",
-
+    "new_title": "New Course",
+    "edit_title": "Edit Course",
+    "delete_title": "Delete Course",
+    
+    "filter_title": "Filter",
     "filter_all": "All",
     "filter_sortby": "Sort by",
     "filter_semester": "Semester {0}",
     "filter_default": "Default",
 
-    "pinned": "Pinned Courses",
-    "pinned_all": "All Pins",
-    "pins": "Pins",
-
-    "cancel": "Cancel",
-    "create": "Create",
-    "save": "Save",
-    "rename": "Rename",
-    "delete": "Delete",
-    "clear": "Clear",
-    "dismiss": "Dismiss",
-    "discard": "Discard",
-    "print": "Print",
-
     "print_title": "Select Up to 5 Topics",
     
-    "new_course_title": "New Course",
-    "edit_course_title": "Edit Course",
-    "delete_course": "Delete Course",
+    "pinned": "Pinned Courses",
 
-    "new_topic_title": "New Topic",
-    "rename_topic_title": "Rename Topic",
-
-    "header_basic_info": "Basic Info",
-    "header_additional_info": "Additional Info",
-
-    "name_label": "Name",
-    "name_placeholder": "e.g: Programming Fundamentals",
-    "alias_label": "AKA",
-    "alias_placeholder": "e.g: ProgFund",
-    "description_label": "Description",
-    "description_placeholder": "e.g: A course to hone coding skills.",
-    "id_label": "Id",
-    "id_placeholder": "e.g: AIF2301062",
-    "semester_label": "Semester",
-    "semester_placeholder": "e.g: 1",
-    "sks_label": "Credits",
-    "sks_placeholder": "e.g: 3",
-    "banner_label": "Banner",
-    "topic_name_label": "Name",
-    "topic_name_placeholder": "e.g: Input and Output",
+    "information_basic": "Basic Info",
+    "information_additional": "Additional Info",
 
     "keep_creating": "Keep Creating",
     "keep_editing": "Keep Editing",
     
     "discard_create_confirm_title": "Discard Draft?",
-    "discard_create_confirm_desc": "Everything you've entered will be lost and won't be saved.",
+    "discard_create_confirm_message": "Everything you've entered will be lost and won't be saved.",
     "discard_edit_confirm_title": "Discard Changes?",
-    "discard_edit_confirm_desc": "The changes you've made won't be saved.",
+    "discard_edit_confirm_message": "The changes you've made won't be saved.",
 
-    "delete_course_confirm_title": "Are you sure you want to delete\\n'{0}'?",
-    "delete_course_confirm_desc": "All related problems and their solutions will also be deleted. This action cannot be undone.",
+    "delete_confirm_title": "Are you sure you want to delete\\n“{0}”?",
+    "delete_confirm_message": "All related problems and their solutions will also be deleted. This action cannot be undone.",
     "delete_error_title": "Deletion Failed",
 
     "banner_upload_error_title": "Failed to Upload Banner",
-    "banner_upload_error_size": "Maximum file size is 2MB.",
-    "banner_upload_success_title": "Upload Complete",
-    "banner_upload_success_message": "Banner was successfully uploaded.",
+    "banner_upload_error_message": "Maximum file size is 2 MB.",
+    "banner_upload_success_title": "Banner Changed",
+    "banner_upload_success_message": "The banner has been set successfully.",
     "banner_clear_error_title": "Failed to Clear Banner",
     "banner_clear_success_title": "Cleared",
     "banner_clear_success_message": "Banner was successfully cleared.",
 
-    "empty_courses_title": "No Courses Yet",
-    "empty_courses_subtitle": "Added courses will appear here.",
-    "empty_pins_title": "No Pins Yet",
-    "empty_pins_subtitle": "Pin courses and they will appear here.",
-    "empty_topics_title": "No Topics Yet",
-    "empty_topics_subtitle": "Added topics will appear here.",
+    "empty_title": "No Courses Yet",
+    "empty_message": "Added courses will appear here.",
     "notfound_title": "Course Not Found",
-    "notfound_subtitle": "It may have been moved or deleted.",
+    "notfound_message": "It may have been moved or deleted.",
+    "empty_pins_title": "No Pins Yet",
+    "empty_pins_message": "Pin courses and they will appear here.",
     
-    "error_generic": "Something went wrong."
+    "error_generic": "Something went wrong.",
+    "error_parameter_missing": "{0} must be specified.",
+    "error_parameter_isnan": "{0} must be a number.",
+    "error_parameter_idexists": "Course “{0}” is already exists.",
+    "error_parameter_idnotfound": "Course “{0}” is not found.",
+    "error_delete_nopermission": "You don't have permission to delete a course."
 }
