--- a/src/languages/en/settings.json
+++ b/src/languages/en/settings.json
@@ -1,12 +1,13 @@
 {
     "title": "Settings",
+
     "signout": "Sign Out",
     "appearance": "Appearance",
     "theme": "Theme",
-    "theme_system": "System default",
+    "theme_system": "System Default",
     "theme_light": "Light",
     "theme_dark": "Dark",
-    "accent_color": "Accent color",
+    "accent_color": "Accent Color",
     "language": "Language",
     "accounts": "Accounts",
     "about_app": "About App",
@@ -14,35 +15,9 @@
     "version": "Version",
     "copyright": "Copyright",
     "copyright_text": "All exam content is copyrighted by Universitas Katolik Parahyangan.",
-    "add_account": "Add",
-    "create_account_title": "Create Account",
-    "username_label": "Username",
-    "username_placeholder": "e.g: john_smith",
-    "nickname_label": "Nickname",
-    "nickname_placeholder": "e.g: John Smith",
-    "url_label": "URL",
-    "url_placeholder": "e.g: https://instagram.com/john.smith_",
-    "role_label": "Role",
-    "password_label": "Password",
-    "password_placeholder": "Strong and memorable",
+    
     "signout_confirm_title": "Are you sure you want to sign out?",
-    "signout_confirm_desc": "You can sign back in at any time.",
-    "create_account_error_title": "Failed to Create Account",
+    "signout_confirm_message": "You can sign back in at any time.",
 
-    "avatar_change": "Change avatar",
-    "avatar_upload_error_title": "Failed to Upload Avatar",
-    "avatar_upload_error_size": "Maximum file size is 2MB.",
-    "avatar_upload_success_title": "Upload Successful",
-    "avatar_upload_success_message": "The avatar has been set successfully.",
-    
-    "cancel": "Cancel",
-    "create": "Create",
-    "dismiss": "Dismiss",
-    "delete": "Delete",
-    "context_delete": "Delete",
-    "delete_account_confirm_title": "Are you sure you want to delete this account?",
-    "delete_account_confirm_desc": "This will remove their access, but any courses, topics, and problems they've created will remain available.",
-    "delete_error_title": "Deletion Failed",
-    
     "error_generic": "Something went wrong."
 }
