--- a/src/languages/id/courses.json
+++ b/src/languages/id/courses.json
@@ -1,93 +1,60 @@
 {
     "title": "Mata Kuliah",
     
-    "context_open_in_new_tab": "Buka di tab baru",
-    "context_pin_template": "Sematkan “{0}”",
-    "context_unpin_template": "Lepaskan “{0}”",
-    "context_pin": "Sematkan",
-    "context_unpin": "Lepaskan",
-    "context_print": "Cetak...",
+    "newtab": "Buka di tab baru",
+    "pin_template": "Sematkan “{0}”",
+    "unpin_template": "Lepaskan “{0}”",
+    "pin": "Sematkan",
+    "unpin": "Lepaskan",
 
-    "tooltip_new_course": "Buat Mata Kuliah Baru",
-    "tooltip_edit_course": "Edit Mata Kuliah",
-    "tooltip_new_topic": "Buat Topik Baru",
-    "tooltip_filter": "Saring",
-
+    "new_title": "Mata Kuliah Baru",
+    "edit_title": "Edit Mata Kuliah",
+    "delete_title": "Hapus Mata Kuliah",
+    
+    "filter_title": "Saring",
     "filter_all": "Semua",
     "filter_sortby": "Urutkan",
     "filter_semester": "Semester {0}",
     "filter_default": "Default",
 
-    "pinned": "Mata Kuliah Disematkan",
-    "pinned_all": "Semua Sematan",
-    "pins": "Sematan",
-
-    "cancel": "Batal",
-    "create": "Buat",
-    "save": "Simpan",
-    "rename": "Ganti",
-    "delete": "Hapus",
-    "clear": "Hapus",
-    "dismiss": "Tutup",
-    "discard": "Buang",
-    "print": "Cetak",
-
     "print_title": "Pilih Maksimal 5 Topik",
     
-    "new_course_title": "Mata Kuliah Baru",
-    "edit_course_title": "Edit Mata Kuliah",
-    "delete_course": "Hapus Mata Kuliah",
+    "pinned": "Mata Kuliah Disematkan",
 
-    "new_topic_title": "Topik Baru",
-    "rename_topic_title": "Ganti Nama Topik",
+    "information_basic": "Informasi Dasar",
+    "information_additional": "Informasi Tambahan",
 
-    "header_basic_info": "Info Dasar",
-    "header_additional_info": "Info Tambahan",
-
-    "name_label": "Nama",
-    "name_placeholder": "cth: Dasar Pemrograman",
-    "alias_label": "Alias",
-    "alias_placeholder": "cth: Daspro",
-    "description_label": "Deskripsi",
-    "description_placeholder": "cth: Mata kuliah untuk mengasah skill koding.",
-    "id_label": "Kode MK",
-    "id_placeholder": "cth: AIF2301062",
-    "semester_label": "Semester",
-    "semester_placeholder": "cth: 1",
-    "sks_label": "SKS",
-    "sks_placeholder": "cth: 3",
-    "banner_label": "Banner",
-    "topic_name_label": "Nama",
-    "topic_name_placeholder": "cth: Input dan Output",
-
-    "keep_creating": "Lanjutin Ngedit",
-    "keep_editing": "Lanjutin Edit",
+    "keep_creating": "Lanjut Membuat",
+    "keep_editing": "Lanjut Mengedit",
     
     "discard_create_confirm_title": "Buang Draf?",
-    "discard_create_confirm_desc": "Semua yang udah kamu isi bakal hilang dan gak akan disimpan.",
+    "discard_create_confirm_message": "Semua yang kamu masukkan akan hilang dan tidak akan disimpan.",
     "discard_edit_confirm_title": "Buang Perubahan?",
-    "discard_edit_confirm_desc": "Perubahan yang kamu buat gak akan disimpan.",
+    "discard_edit_confirm_message": "Perubahan yang kamu buat tidak akan disimpan.",
 
-    "delete_course_confirm_title": "Yakin mau hapus mata kuliah\\n'{0}'?",
-    "delete_course_confirm_desc": "Semua soal dan jawabannya juga bakal ikut kehapus. Aksi ini gak bisa dibatalin.",
+    "delete_confirm_title": "Kamu yakin mau menghapus\\n“{0}”?",
+    "delete_confirm_message": "Semua soal-soal dan jawabannya juga akan dihapus. Semua yang dihapus tidak bisa dipulihkan.",
     "delete_error_title": "Gagal Menghapus",
 
     "banner_upload_error_title": "Gagal Mengupload Banner",
-    "banner_upload_error_size": "Ukuran file maksimal 2MB.",
-    "banner_upload_success_title": "Diupload",
-    "banner_upload_success_message": "Banner berhasil diunggah.",
+    "banner_upload_error_message": "Ukuran file maksimal 2 MB.",
+    "banner_upload_success_title": "Banner Diganti",
+    "banner_upload_success_message": "Banner berhasil disetel.",
     "banner_clear_error_title": "Gagal Menghapus Banner",
     "banner_clear_success_title": "Dihapus",
-    "banner_clear_success_message": "Banner berhasil dibersihkan.",
+    "banner_clear_success_message": "Banner berhasil dihapus.",
 
-    "empty_courses_title": "Belum Ada Mata Kuliah",
-    "empty_courses_subtitle": "Mata kuliah yang ditambahkan akan muncul di sini.",
-    "empty_pins_title": "Belum Ada Pin",
-    "empty_pins_subtitle": "Sematkan mata kuliah dan akan muncul di sini.",
-    "empty_topics_title": "Belum Ada Topik",
-    "empty_topics_subtitle": "Topik yang ditambahkan akan muncul di sini.",
+    "empty_title": "Belum Ada Mata Kuliah",
+    "empty_message": "Mata kuliah nantinya akan muncul di sini.",
     "notfound_title": "Mata Kuliah Tidak Ditemukan",
-    "notfound_subtitle": "Mungkin sudah dipindahkan atau dihapus.",
+    "notfound_message": "Mungkin sudah dipindah atau dihapus.",
+    "empty_pins_title": "Belum Ada Sematan",
+    "empty_pins_message": "Sematkan mata kuliah dan nanti akan muncul di sini.",
     
-    "error_generic": "Ada yang salah."
+    "error_generic": "Ada yang salah.",
+    "error_parameter_missing": "{0} tidak boleh kosong.",
+    "error_parameter_isnan": "{0} harus berupa angka.",
+    "error_parameter_idexists": "Mata kuliah “{0}” sudah ada.",
+    "error_parameter_idnotfound": "Mata kuliah “{0}” tidak dapat ditemukan.",
+    "error_delete_nopermission": "Kamu tidak punya akses untuk menghapus mata kuliah."
 }
