--- a/src/languages/id/topics.json
+++ b/src/languages/id/topics.json
@@ -1,64 +1,33 @@
 {
     "title": "Topik",
 
-    "back": "Kembali",
-    "tooltip_print": "Cetak",
+    "new_title": "Topik Baru",
+    "rename_title": "Ganti Nama Topik",
+    "name_placeholder": "cth.: Input dan Output",
 
     "problems_label": "{0} Soal",
-    "updated_label": "Diperbarui {0}",
-
-    "context_rename": "Ganti Nama",
-    "context_delete": "Hapus",
-    
-    "delete": "Hapus",
-    "cancel": "Batal",
-    "create": "Buat",
-    "save": "Simpan",
-    "dismiss": "Tutup",
-    "discard": "Buang",
-    
-    "tooltip_new_problem": "Soal Baru",
-    "new_problem_title": "Soal Baru",
-    "edit_problem_title": "Edit Soal",
-
-    "select_topic_title": "Pilih Topik",
-    "change_topic_title": "Ganti Topik",
-    
-    "source_header": "Sumber Soal",
-    "type_label": "Tipe",
-    "academic_year_label": "Tahun Akademik",
-    "academic_year_placeholder": "cth: 2025",
-    
-    "markdown_tab": "Markdown",
-    "preview_tab": "Pratinjau",
-    "problem_text_placeholder": "Ketik soal di sini...",
-
-    "delete_topic_confirm_title": "Yakin mau hapus\\n'{0}'?",
-    "delete_topic_confirm_desc": "Semua soal dan solusinya juga bakal ikut kehapus. Aksi ini gak bisa dibatalin.",
-    "delete_error_title": "Gagal Menghapus",
-    
-    "discard_create_problem_title": "Buang Draf Soal?",
-    "discard_create_problem_desc": "Soal baru akan dibuang dan gak akan diposting.",
-    "keep_creating_problem": "Lanjutin Buat Soal",
-    
-    "discard_edit_problem_title": "Buang Perubahan?",
-    "discard_edit_problem_desc": "Perubahanmu gak akan disimpan.",
-    "keep_editing_problem": "Lanjutin Edit Soal",
-
-    "create_success_title": "Berhasil Dibuat",
-    "create_success_message": "Soal berhasil dibuat.",
-    "create_failed_title": "Gagal Membuat",
-    
-    "edit_success_title": "Berhasil Disimpan",
-    "edit_success_message": "Soal berhasil diubah dan disimpan.",
-    "edit_failed_title": "Gagal Menyimpan",
-
-    "error_generic": "Ada yang salah.",
+    "updated_label": "Di-update {0}",
 
     "questionbank": "Kumpulan Soal",
     "questionbank_disclaimer": "Mohon untuk tidak mendistribusikan naskah soal di luar lingkup Universitas Katolik Parahyangan.\nPergunakan naskah soal sebagaimana mestinya.",
 
-    "tooltip_quizmentor": "Latihan dengan Mentor",
+    "practice_label": "Latihan bareng Mentor",
+    "recently_updated_title": "Baru Di-update",
 
-    "recently_updated_title": "Baru Di-update"
+    "select_title": "Pilih Topik",
+    "change_title": "Ganti Topik",
+
+    "delete_confirm_title": "Kamu yakin mau menghapus\\n“{0}”?",
+    "delete_confirm_message": "Semua soal dan jawabannya akan ikut terhapus. Semua yang terhapus tidak dapat dipulihkan.",
+    "delete_error_title": "Gagal Menghapus",
+
+    "empty_title": "Belum Ada Topik",
+    "empty_message": "Topik-topik nantinya akan muncul di sini.",
+    "notfound_title": "Topik Tidak Ditemukan",
+    "notfound_message": "Mungkin sudah dipindah atau dihapus.",
+
+    "error_generic": "Ada yang salah.",
+    "error_parameter_missing": "{0} tidak boleh kosong.",
+    "error_parameter_topiknamemissing": "Nama topik tidak boleh kosong.",
+    "error_parameter_courseidmissing": "Id mata kuliah tidak boleh kosong."
 }
