--- a/src/languages/jp/generic.json
+++ b/src/languages/jp/generic.json
@@ -1,14 +1,52 @@
 {
     "delete": "削除",
+    "clear": "クリア",
     "cancel": "キャンセル",
     "create": "作成",
     "save": "保存",
     "dismiss": "閉じる",
     "discard": "破棄",
+    "rename": "名前を変更",
+    "print": "印刷",
+    "print_bulk": "印刷...",
+    "back": "戻る",
     "continue": "続行",
     "start": "開始",
     "next": "次へ",
     "prev": "前へ",
     "done": "完了",
-    "submit": "送信"
+    "submit": "送信",
+    "edit": "編集",
+    "add": "追加",
+
+    "id": "ID",
+    "code": "ID",
+    "name": "名前",
+    "alias": "別名",
+    "description": "説明",
+    "semester": "学期",
+    "sks": "単位",
+    "banner": "バナー",
+    "question": "質問",
+    "source": "ソース",
+    "year": "年",
+    "course": "コース",
+    "topic": "トピック",
+    "problem": "**問題**",
+    "username": "ユーザー名",
+    "nickname": "ニックネーム",
+    "password": "パスワード",
+    "url": "URL",
+    "role": "役割",
+
+    "id_placeholder": "例: AIF2301062",
+    "name_placeholder": "例: プログラミングの基礎",
+    "alias_placeholder": "例: ProgFund",
+    "description_placeholder": "例: コーディングスキルを磨くためのコース。",
+    "semester_placeholder": "例: 1",
+    "sks_placeholder": "例: 3",
+    "username_placeholder": "例: john_smith",
+    "nickname_placeholder": "例: John Smith",
+    "url_placeholder": "例: https://instagram.com/john.smith_",
+    "password_placeholder": "強力で覚えやすい"
 }
