--- a/src/languages/jp/topics.json
+++ b/src/languages/jp/topics.json
@@ -1,47 +1,33 @@
 {
     "title": "トピック",
-    "back": "戻る",
-    "tooltip_print": "印刷",
-    "problems_label": "{0}件の問題",
-    "updated_label": "{0}に更新",
-    "context_rename": "名前の変更",
-    "context_delete": "削除",
-    "delete": "削除",
-    "cancel": "キャンセル",
-    "create": "作成",
-    "save": "保存",
-    "dismiss": "閉じる",
-    "discard": "破棄",
-    "tooltip_new_problem": "新規問題",
-    "new_problem_title": "新規問題",
-    "edit_problem_title": "問題を編集",
-    "select_topic_title": "トピックを選択",
-    "change_topic_title": "トピックを変更",
-    "source_header": "問題の出典",
-    "type_label": "タイプ",
-    "academic_year_label": "年度",
-    "academic_year_placeholder": "例: 2025",
-    "markdown_tab": "マークダウン",
-    "preview_tab": "プレビュー",
-    "problem_text_placeholder": "ここに問題を入力してください...",
-    "delete_topic_confirm_title": "「{0}」を本当に削除しますか？",
-    "delete_topic_confirm_desc": "そのすべての問題と解答も削除されます。この操作は元に戻せません。",
+
+    "new_title": "新しいトピック",
+    "rename_title": "トピックの名前を変更",
+    "name_placeholder": "例：入出力",
+
+    "problems_label": "{0} 問題",
+    "updated_label": "更新 {0}",
+
+    "questionbank": "ドリル",
+    "questionbank_disclaimer": "このドキュメントをUniversitas Katolik Parahyanganの範囲外に配布しないでください。\nこのドキュメントを適切に使用してください。",
+
+    "practice_label": "メンターと練習",
+    "recently_updated_title": "最近更新",
+
+    "select_title": "トピックを選択",
+    "change_title": "トピックを変更",
+
+    "delete_confirm_title": "本当に「{0}」を削除しますか？",
+    "delete_confirm_message": "すべての問題とその解答も削除されます。この操作は元に戻せません。",
     "delete_error_title": "削除に失敗しました",
-    "discard_create_problem_title": "問題の下書きを破棄しますか？",
-    "discard_create_problem_desc": "新しい問題は破棄され、投稿されません。",
-    "keep_creating_problem": "作成を続ける",
-    "discard_edit_problem_title": "変更を破棄しますか？",
-    "discard_edit_problem_desc": "変更は保存されません。",
-    "keep_editing_problem": "編集を続ける",
-    "create_success_title": "作成成功",
-    "create_success_message": "問題は正常に作成されました。",
-    "create_failed_title": "作成に失敗しました",
-    "edit_success_title": "正常に保存されました",
-    "edit_success_message": "問題は正常に更新および保存されました。",
-    "edit_failed_title": "保存に失敗しました",
-    "error_generic": "何か問題が発生しました。",
-    "questionbank": "問題バンク",
-    "questionbank_disclaimer": "この文書をUniversitas Katolik Parahyanganの範囲外で配布しないでください。\nこの文書を適切に使用してください。",
-    "tooltip_quizmentor": "メンターで練習",
-    "recently_updated_title": "最近の更新"
+
+    "empty_title": "まだトピックはありません",
+    "empty_message": "追加されたトピックはここに表示されます。",
+    "notfound_title": "トピックが見つかりません",
+    "notfound_message": "移動または削除された可能性があります。",
+
+    "error_generic": "問題が発生しました。",
+    "error_parameter_missing": "{0}を指定する必要があります。",
+    "error_parameter_topicnamemissing": "トピックの名前を指定する必要があります。",
+    "error_parameter_courseidmissing": "コースのIDを指定する必要があります。"
 }
