--- a/src/languages/kr/settings.json
+++ b/src/languages/kr/settings.json
@@ -1,48 +1,23 @@
 {
     "title": "설정",
+
     "signout": "로그아웃",
     "appearance": "모양",
     "theme": "테마",
     "theme_system": "시스템 기본값",
-    "theme_light": "라이트",
-    "theme_dark": "다크",
-    "accent_color": "강조 색상",
+    "theme_light": "밝게",
+    "theme_dark": "어둡게",
+    "accent_color": "포인트 색상",
     "language": "언어",
     "accounts": "계정",
     "about_app": "앱 정보",
     "git_repository": "Git 저장소",
     "version": "버전",
     "copyright": "저작권",
-    "copyright_text": "모든 시험 콘텐츠의 저작권은 Universitas Katolik Parahyangan에 있어요.",
-    "add_account": "추가",
-    "create_account_title": "계정 만들기",
-    "username_label": "사용자 이름",
-    "username_placeholder": "예: john_smith",
-    "nickname_label": "닉네임",
-    "nickname_placeholder": "예: 홍길동",
-    "url_label": "URL",
-    "url_placeholder": "예: https://instagram.com/john.smith_",
-    "role_label": "역할",
-    "password_label": "비밀번호",
-    "password_placeholder": "강력하고 기억하기 쉬운 비밀번호",
-    "signout_confirm_title": "정말 로그아웃하시겠습니까?",
-    "signout_confirm_desc": "언제든지 다시 로그인할 수 있습니다.",
-    "create_account_error_title": "계정 생성 실패",
+    "copyright_text": "모든 시험 콘텐츠는 Universitas Katolik Parahyangan에 의해 저작권 보호됩니다.",
+    
+    "signout_confirm_title": "정말로 로그아웃하시겠습니까?",
+    "signout_confirm_message": "언제든지 다시 로그인할 수 있습니다.",
 
-    "avatar_change": "아바타 변경",
-    "avatar_upload_error_title": "아바타 업로드 실패",
-    "avatar_upload_error_size": "최대 파일 크기는 2MB입니다.",
-    "avatar_upload_success_title": "업로드 성공",
-    "avatar_upload_success_message": "아바타가 성공적으로 설정되었습니다.",
-    
-    "cancel": "취소",
-    "create": "만들기",
-    "dismiss": "닫기",
-    "delete": "삭제",
-    "context_delete": "삭제",
-    "delete_account_confirm_title": "이 계정을 정말 삭제하시겠습니까?",
-    "delete_account_confirm_desc": "이렇게 하면 해당 사용자의 접근 권한은 제거되지만, 그들이 만든 모든 강의, 주제, 문제는 계속 사용할 수 있습니다.",
-    "delete_error_title": "삭제 실패",
-    
     "error_generic": "문제가 발생했습니다."
 }
