--- a/src/languages/en/generic.json
+++ b/src/languages/en/generic.json
@@ -1,14 +1,52 @@
 {
     "delete": "Delete",
+    "clear": "Clear",
     "cancel": "Cancel",
     "create": "Create",
     "save": "Save",
     "dismiss": "Dismiss",
     "discard": "Discard",
+    "rename": "Rename",
+    "print": "Print",
+    "print_bulk": "Print...",
+    "back": "Back",
     "continue": "Continue",
     "start": "Start",
     "next": "Next",
     "prev": "Previous",
     "done": "Done",
-    "submit": "Submit"
+    "submit": "Submit",
+    "edit": "Edit",
+    "add": "Add",
+    
+    "id": "Id",
+    "code": "Id",
+    "name": "Name",
+    "alias": "AKA",
+    "description": "Description",
+    "semester": "Semester",
+    "sks": "Credits",
+    "banner": "Banner",
+    "question": "Question",
+    "source": "Source",
+    "year": "Year",
+    "course": "Course",
+    "topic": "Topic",
+    "problem": "Problem",
+    "username": "Username",
+    "nickname": "Nickname",
+    "password": "Password",
+    "url": "URL",
+    "role": "Role",
+    
+    "id_placeholder": "e.g: AIF2301062",
+    "name_placeholder": "e.g: Programming Fundamentals",
+    "alias_placeholder": "e.g: ProgFund",
+    "description_placeholder": "e.g: A course to hone coding skills.",
+    "semester_placeholder": "e.g: 1",
+    "sks_placeholder": "e.g: 3",
+    "username_placeholder": "e.g: john_smith",
+    "nickname_placeholder": "e.g: John Smith",
+    "url_placeholder": "e.g: https://instagram.com/john.smith_",
+    "password_placeholder": "Strong and memorable"
 }
