--- a/src/languages/en/mentor.json
+++ b/src/languages/en/mentor.json
@@ -14,7 +14,7 @@
     "features_update_title": "Updated daily",
     "features_update_description": "You can request new practice questions every day to sharpen your skills.",
 
-    "generating": "Generating questions... This usually takes 5-7 minutes.",
+    "generating_message": "Generating questions...\\nThis may takes 5-7 minutes.",
     
     "metadata_updated": "Updated {0}",
     "metadata_problems": "{0} multiple-choice problems",
