--- a/src/languages/jp/courses.json
+++ b/src/languages/jp/courses.json
@@ -1,77 +1,60 @@
 {
     "title": "コース",
-    "context_open_in_new_tab": "新しいタブで開く",
-    "context_pin_template": "「{0}」をピン留めする",
-    "context_unpin_template": "「{0}」のピン留めを外す",
-    "context_pin": "ピン留め",
-    "context_unpin": "ピン留めを外す",
-    "context_print": "印刷...",
-    "tooltip_new_course": "新規コース作成",
-    "tooltip_edit_course": "コースを編集",
-    "tooltip_new_topic": "新規トピック作成",
-    "tooltip_filter": "フィルター",
+
+    "newtab": "新しいタブで開く",
+    "pin_template": "「{0}」をピン留め",
+    "unpin_template": "「{0}」のピン留めを解除",
+    "pin": "ピン留め",
+    "unpin": "ピン留め解除",
+
+    "new_title": "新しいコース",
+    "edit_title": "コースを編集",
+    "delete_title": "コースを削除",
+
+    "filter_title": "フィルター",
     "filter_all": "すべて",
-    "filter_sortby": "並び順",
+    "filter_sortby": "並び替え",
     "filter_semester": "セメスター{0}",
     "filter_default": "デフォルト",
-    "pinned": "ピン留めされたコース",
-    "pinned_all": "すべてのピン",
-    "pins": "ピン",
-    "cancel": "キャンセル",
-    "create": "作成",
-    "save": "保存",
-    "rename": "名前の変更",
-    "delete": "削除",
-    "clear": "クリア",
-    "dismiss": "閉じる",
-    "discard": "破棄",
-    "print": "印刷",
+
     "print_title": "最大5つのトピックを選択",
-    "new_course_title": "新規コース",
-    "edit_course_title": "コースの編集",
-    "delete_course": "コースの削除",
-    "new_topic_title": "新規トピック",
-    "rename_topic_title": "トピック名の変更",
-    "header_basic_info": "基本情報",
-    "header_additional_info": "追加情報",
-    "name_label": "名前",
-    "name_placeholder": "例: プログラミングの基礎",
-    "alias_label": "別名",
-    "alias_placeholder": "例: プログラ基礎",
-    "description_label": "説明",
-    "description_placeholder": "例: コーディングスキルを磨くためのコース。",
-    "id_label": "ID",
-    "id_placeholder": "例: AIF2301062",
-    "semester_label": "セメスター",
-    "semester_placeholder": "例: 1",
-    "sks_label": "単位数",
-    "sks_placeholder": "例: 3",
-    "banner_label": "バナー",
-    "topic_name_label": "トピック名",
-    "topic_name_placeholder": "例: 入力と出力",
+
+    "pinned": "ピン留めされたコース",
+
+    "information_basic": "基本情報",
+    "information_additional": "追加情報",
+
     "keep_creating": "作成を続ける",
     "keep_editing": "編集を続ける",
+
     "discard_create_confirm_title": "下書きを破棄しますか？",
-    "discard_create_confirm_desc": "入力した内容はすべて失われ、保存されません。",
+    "discard_create_confirm_message": "入力した内容はすべて失われ、保存されません。",
     "discard_edit_confirm_title": "変更を破棄しますか？",
-    "discard_edit_confirm_desc": "行った変更は保存されません。",
-    "delete_course_confirm_title": "「{0}」を本当に削除しますか？",
-    "delete_course_confirm_desc": "関連するすべての問題とその解答も削除されます。この操作は元に戻せません。",
+    "discard_edit_confirm_message": "行った変更は保存されません。",
+
+    "delete_confirm_title": "本当に「{0}」を削除しますか？",
+    "delete_confirm_message": "関連するすべての**問題**とその解答も削除されます。この操作は元に戻せません。",
     "delete_error_title": "削除に失敗しました",
+
     "banner_upload_error_title": "バナーのアップロードに失敗しました",
-    "banner_upload_error_size": "最大ファイルサイズは2MBです。",
-    "banner_upload_success_title": "アップロード完了",
-    "banner_upload_success_message": "バナーは正常にアップロードされました。",
+    "banner_upload_error_message": "最大ファイルサイズは2MBです。",
+    "banner_upload_success_title": "バナーを変更しました",
+    "banner_upload_success_message": "バナーは正常に設定されました。",
     "banner_clear_error_title": "バナーのクリアに失敗しました",
-    "banner_clear_success_title": "クリアされました",
+    "banner_clear_success_title": "クリアしました",
     "banner_clear_success_message": "バナーは正常にクリアされました。",
-    "empty_courses_title": "まだコースがありません",
-    "empty_courses_subtitle": "追加されたコースはここに表示されます。",
-    "empty_pins_title": "まだピン留めされた項目がありません",
-    "empty_pins_subtitle": "コースをピン留めすると、ここに表示されます。",
-    "empty_topics_title": "まだトピックがありません",
-    "empty_topics_subtitle": "追加されたトピックはここに表示されます。",
+
+    "empty_title": "まだコースはありません",
+    "empty_message": "追加されたコースはここに表示されます。",
     "notfound_title": "コースが見つかりません",
-    "notfound_subtitle": "移動または削除された可能性があります。",
-    "error_generic": "何か問題が発生しました。"
+    "notfound_message": "移動または削除された可能性があります。",
+    "empty_pins_title": "まだピン留めはありません",
+    "empty_pins_message": "コースをピン留めすると、ここに表示されます。",
+    
+    "error_generic": "問題が発生しました。",
+    "error_parameter_missing": "{0}を指定する必要があります。",
+    "error_parameter_isnan": "{0}は数字である必要があります。",
+    "error_parameter_idexists": "コース「{0}」は既に存在します。",
+    "error_parameter_idnotfound": "コース「{0}」が見つかりません。",
+    "error_delete_nopermission": "コースを削除する権限がありません。"
 }
