--- a/src/languages/jp/mentor.json
+++ b/src/languages/jp/mentor.json
@@ -2,7 +2,7 @@
     "title": "メンター",
 
     "welcome_title": "メンターへようこそ",
-    "welcome_description": "最近、先生はすごく忙しいけど、もっと練習が必要なんだ。そんな時はメンターにお任せ。TAみたいに、君の学習をサポートするよ。",
+    "welcome_description": "最近、先生はすごく忙しいけど、もっと練習が必要なんだ。そんな時はメンターにお任せ。TAみたいに、君の学習をサポートしてくれるよ。",
 
     "readyfor_title": "試験の準備はOK？",
     "readyfor_description": "メンターと一緒に試験対策をしよう。",
@@ -14,8 +14,8 @@
     "features_update_title": "毎日更新",
     "features_update_description": "毎日新しい練習問題をリクエストして、スキルアップしよう。",
 
-    "generating": "問題を作成中です。通常5〜7分かかります。",
-
+    "generating_message": "問題を作成中です...\\nこれには5〜7分かかる場合があります。",
+    
     "metadata_updated": "{0}に更新",
     "metadata_problems": "選択問題{0}問",
     "metadata_aigenerated": "AIが生成",
