--- a/src/languages/jp/signin.json
+++ b/src/languages/jp/signin.json
@@ -1,10 +1,10 @@
 {
     "title": "サインイン",
     "description": "管理者としてアクセスし、学生向けのドリルを投稿します。",
-    "username": "ユーザー名",
-    "password": "パスワード",
+    
+    "error_generic": "問題が発生しました",
     "error_incorrect": "ユーザー名またはパスワードが正しくありません",
     "error_nointernet": "インターネットに接続してください",
-    "error_server": "現在問題が発生しています。後でもう一度お試しください。",
-    "error_generic": "何か問題が発生しました"
+    "error_server": "現在、問題が発生しています。後でもう一度お試しください。",
+    "error_signin": "続行するにはサインインしてください"
 }
