--- a/src/languages/kr/courses.json
+++ b/src/languages/kr/courses.json
@@ -1,93 +1,60 @@
 {
-    "title": "강의",
-    
-    "context_open_in_new_tab": "새 탭에서 열기",
-    "context_pin_template": "“{0}” 고정하기",
-    "context_unpin_template": "“{0}” 고정 해제하기",
-    "context_pin": "고정",
-    "context_unpin": "고정 해제",
-    "context_print": "인쇄...",
+    "title": "강좌",
 
-    "tooltip_new_course": "새 강의 만들기",
-    "tooltip_edit_course": "강의 수정",
-    "tooltip_new_topic": "새 주제 만들기",
-    "tooltip_filter": "필터",
-    
+    "newtab": "새 탭에서 열기",
+    "pin_template": "“{0}” 고정",
+    "unpin_template": "“{0}” 고정 해제",
+    "pin": "고정",
+    "unpin": "고정 해제",
+
+    "new_title": "새 강좌",
+    "edit_title": "강좌 편집",
+    "delete_title": "강좌 삭제",
+
+    "filter_title": "필터",
     "filter_all": "전체",
-    "filter_sortby": "정렬 기준",
-    "filter_semester": "{0}학기",
+    "filter_sortby": "정렬",
+    "filter_semester": "학기 {0}",
     "filter_default": "기본",
 
-    "pinned": "고정된 강의",
-    "pinned_all": "모든 고정 항목",
-    "pins": "고정 항목",
+    "print_title": "최대 5개의 주제 선택",
 
-    "cancel": "취소",
-    "create": "만들기",
-    "save": "저장",
-    "rename": "이름 바꾸기",
-    "delete": "삭제",
-    "clear": "지우기",
-    "dismiss": "닫기",
-    "discard": "삭제",
-    "print": "인쇄",
+    "pinned": "고정된 강좌",
 
-    "print_title": "최대 5개의 주제를 선택하세요",
-    
-    "new_course_title": "새 강의",
-    "edit_course_title": "강의 수정",
-    "delete_course": "강의 삭제",
-
-    "new_topic_title": "새 주제",
-    "rename_topic_title": "주제 이름 바꾸기",
-
-    "header_basic_info": "기본 정보",
-    "header_additional_info": "추가 정보",
-
-    "name_label": "이름",
-    "name_placeholder": "예: 프로그래밍 기초",
-    "alias_label": "별칭",
-    "alias_placeholder": "예: 프기",
-    "description_label": "설명",
-    "description_placeholder": "예: 코딩 기술을 연마하기 위한 강의.",
-    "id_label": "ID",
-    "id_placeholder": "예: AIF2301062",
-    "semester_label": "학기",
-    "semester_placeholder": "예: 1",
-    "sks_label": "학점",
-    "sks_placeholder": "예: 3",
-    "banner_label": "배너",
-    "topic_name_label": "이름",
-    "topic_name_placeholder": "예: 입출력",
+    "information_basic": "기본 정보",
+    "information_additional": "추가 정보",
 
     "keep_creating": "계속 만들기",
-    "keep_editing": "계속 수정",
-    
-    "discard_create_confirm_title": "초안을 삭제하시겠습니까?",
-    "discard_create_confirm_desc": "입력한 모든 내용이 사라지고 저장되지 않습니다.",
-    "discard_edit_confirm_title": "변경 사항을 삭제하시겠습니까?",
-    "discard_edit_confirm_desc": "변경하신 내용이 저장되지 않습니다.",
+    "keep_editing": "계속 편집",
 
-    "delete_course_confirm_title": "'{0}'을(를) 정말 삭제하시겠습니까?",
-    "delete_course_confirm_desc": "모든 관련 문제와 해당 풀이도 함께 삭제됩니다. 이 작업은 되돌릴 수 없습니다.",
+    "discard_create_confirm_title": "초안을 삭제하시겠습니까?",
+    "discard_create_confirm_message": "입력하신 모든 내용은 손실되며 저장되지 않습니다.",
+    "discard_edit_confirm_title": "변경 사항을 삭제하시겠습니까?",
+    "discard_edit_confirm_message": "수정하신 사항은 저장되지 않습니다.",
+
+    "delete_confirm_title": "정말로 “{0}”을(를) 삭제하시겠습니까?",
+    "delete_confirm_message": "관련된 모든 **문제**와 그 해답도 삭제됩니다. 이 작업은 실행 취소할 수 없습니다.",
     "delete_error_title": "삭제 실패",
 
     "banner_upload_error_title": "배너 업로드 실패",
-    "banner_upload_error_size": "최대 파일 크기는 2MB입니다.",
-    "banner_upload_success_title": "업로드 완료",
-    "banner_upload_success_message": "배너가 성공적으로 업로드되었습니다.",
+    "banner_upload_error_message": "최대 파일 크기는 2MB입니다.",
+    "banner_upload_success_title": "배너 변경 완료",
+    "banner_upload_success_message": "배너가 성공적으로 설정되었습니다.",
     "banner_clear_error_title": "배너 지우기 실패",
-    "banner_clear_success_title": "지워짐",
+    "banner_clear_success_title": "지우기 완료",
     "banner_clear_success_message": "배너가 성공적으로 지워졌습니다.",
 
-    "empty_courses_title": "아직 강의가 없습니다",
-    "empty_courses_subtitle": "추가된 강의는 여기에 표시됩니다.",
-    "empty_pins_title": "아직 고정된 항목이 없습니다",
-    "empty_pins_subtitle": "강의를 고정하면 여기에 표시됩니다.",
-    "empty_topics_title": "아직 주제가 없습니다",
-    "empty_topics_subtitle": "추가된 주제는 여기에 표시됩니다.",
-    "notfound_title": "강의를 찾을 수 없음",
-    "notfound_subtitle": "이동되었거나 삭제되었을 수 있습니다.",
+    "empty_title": "아직 강좌가 없습니다",
+    "empty_message": "추가된 강좌는 여기에 표시됩니다.",
+    "notfound_title": "강좌를 찾을 수 없습니다",
+    "notfound_message": "이동되었거나 삭제되었을 수 있습니다.",
+    "empty_pins_title": "고정된 강좌가 없습니다",
+    "empty_pins_message": "강좌를 고정하면 여기에 표시됩니다.",
     
-    "error_generic": "문제가 발생했습니다."
+    "error_generic": "문제가 발생했습니다.",
+    "error_parameter_missing": "{0}을(를) 지정해야 합니다.",
+    "error_parameter_isnan": "{0}은(는) 숫자여야 합니다.",
+    "error_parameter_idexists": "강좌 “{0}”이(가) 이미 존재합니다.",
+    "error_parameter_idnotfound": "강좌 “{0}”을(를) 찾을 수 없습니다.",
+    "error_delete_nopermission": "강좌를 삭제할 권한이 없습니다."
 }
