--- a/src/languages/kr/generic.json
+++ b/src/languages/kr/generic.json
@@ -1,14 +1,52 @@
 {
     "delete": "삭제",
+    "clear": "지우기",
     "cancel": "취소",
     "create": "생성",
     "save": "저장",
     "dismiss": "닫기",
     "discard": "무시",
+    "rename": "이름 변경",
+    "print": "인쇄",
+    "print_bulk": "인쇄...",
+    "back": "뒤로",
     "continue": "계속",
     "start": "시작",
     "next": "다음",
     "prev": "이전",
     "done": "완료",
-    "submit": "제출"
+    "submit": "제출",
+    "edit": "편집",
+    "add": "추가",
+
+    "id": "ID",
+    "code": "ID",
+    "name": "이름",
+    "alias": "별칭",
+    "description": "설명",
+    "semester": "학기",
+    "sks": "학점",
+    "banner": "배너",
+    "question": "질문",
+    "source": "출처",
+    "year": "년",
+    "course": "강좌",
+    "topic": "주제",
+    "problem": "**문제**",
+    "username": "사용자 이름",
+    "nickname": "별명",
+    "password": "비밀번호",
+    "url": "URL",
+    "role": "역할",
+
+    "id_placeholder": "예: AIF2301062",
+    "name_placeholder": "예: 프로그래밍 기초",
+    "alias_placeholder": "예: ProgFund",
+    "description_placeholder": "예: 코딩 기술을 연마하기 위한 강좌입니다.",
+    "semester_placeholder": "예: 1",
+    "sks_placeholder": "예: 3",
+    "username_placeholder": "예: john_smith",
+    "nickname_placeholder": "예: John Smith",
+    "url_placeholder": "예: https://instagram.com/john.smith_",
+    "password_placeholder": "강력하고 기억하기 쉬운"
 }
