--- a/src/languages/kr/mentor.json
+++ b/src/languages/kr/mentor.json
@@ -14,10 +14,10 @@
     "features_update_title": "매일 업데이트",
     "features_update_description": "매일 새로운 연습 문제를 요청해서 실력을 키워보세요.",
 
-    "generating": "문제를 생성 중입니다. 보통 5~7분 정도 소요됩니다.",
-
+    "generating_message": "문제를 생성 중입니다...\\n5~7분 정도 소요될 수 있습니다.",
+    
     "metadata_updated": "{0} 업데이트됨",
-    "metadata_problems": "객관식 {0}문제",
+    "metadata_problems": "객관식 문제 {0}개",
     "metadata_aigenerated": "AI가 생성함",
     "metadata_score": "{0}점을 받았습니다",
 
