Patched some fixes
- Added SEO
- Added search for admin
- Fixed some issues

--- a/src/languages/en/generic.json
+++ b/src/languages/en/generic.json
@@ -38,6 +38,7 @@
     "password": "Password",
     "url": "URL",
     "role": "Role",
+    "editors": "Editors",
     
     "id_placeholder": "e.g: AIF2301062",
     "name_placeholder": "e.g: Programming Fundamentals",
