--- a/src/languages/id/courses.json
+++ b/src/languages/id/courses.json
@@ -6,6 +6,7 @@
     "unpin_template": "Lepaskan “{0}”",
     "pin": "Sematkan",
     "unpin": "Lepaskan",
+    "link_copy": "Salin tautan",
 
     "new_title": "Mata Kuliah Baru",
     "edit_title": "Edit Mata Kuliah",
