--- a/src/languages/jaksel/courses.json
+++ b/src/languages/jaksel/courses.json
@@ -6,6 +6,7 @@
     "unpin_template": "Unpin “{0}”",
     "pin": "Pin",
     "unpin": "Unpin",
+    "link_copy": "Copas link",
 
     "new_title": "Matkul Baru",
     "edit_title": "Edit Matkul",
