--- a/src/languages/jp/courses.json
+++ b/src/languages/jp/courses.json
@@ -6,6 +6,7 @@
     "unpin_template": "「{0}」のピン留めを解除",
     "pin": "ピン留め",
     "unpin": "ピン留め解除",
+    "link_copy": "リンクをコピー",
 
     "new_title": "新しいコース",
     "edit_title": "コースを編集",
