--- a/src/languages/kr/courses.json
+++ b/src/languages/kr/courses.json
@@ -6,6 +6,7 @@
     "unpin_template": "“{0}” 고정 해제",
     "pin": "고정",
     "unpin": "고정 해제",
+    "link_copy": "링크 복사",
 
     "new_title": "새 강좌",
     "edit_title": "강좌 편집",
