--- a/src/languages/en/courses.json
+++ b/src/languages/en/courses.json
@@ -6,6 +6,7 @@
     "unpin_template": "Unpin “{0}”",
     "pin": "Pin",
     "unpin": "Unpin",
+    "link_copy": "Copy link",
 
     "new_title": "New Course",
     "edit_title": "Edit Course",
